--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
             <div>
 
-                <p class="name" >Apple TV+ which we named as Planet TV</p>
+                <p class="name" >Apple TV+ (Planet TV)</p>
                 <p class="line" >Nov, 2022</p>
                 <p class="line" >Collaborative Project</p>
                 <p class="line" >Worked on the Home Page page</p>
