--- a/index.html
+++ b/index.html
@@ -162,32 +162,35 @@
 
       </div>
       <!-- 3 -->
-      <!-- <div class="project-card">
-        <img src="./image/yellowcart.png" alt="">
-        <title class="project-title">YellowCart</title>
-        <h3 class="project-title">YellowCart</h3>
-        <p class="project-description">An e-commerce website with login page and 2 product section </p>
+      <div class="project-card">
+        <img src="./images/Screenshot (2996).png" alt="">
+        <title class="project-title">Planet Tv</title>
+        <h3 class="project-title">planet Tv</h3>
+        <p class="project-description">Apple TV is a digital media player and microconsole developed and marketed by Apple Inc.</p>
         <p class="project-tech-stack">HTML, CSS, JAVASCRIPT</p>
         <div style="display:flex; flex-direction: row; justify-content: space-between;"><a class="project-github-link"
-            href="https://github.com/abhishek1494k/feigned-waste-5696"><i class="fa-brands fa-github"></i></a>
-          <a class="project-deployed-link" href="https://yellowcart-com.netlify.app/"><i
+            href="https://github.com/aaka8566/AppleTv"><i class="fa-brands fa-github"></i></a>
+          <a class="project-deployed-link" href="https://verdant-banoffee-db8b30.netlify.app/"><i
               class="fa-solid fa-arrow-up-right-from-square"></i></a>
         </div>
+      </div>
 
-      </div> -->
       <!-- 4 -->
-      <!-- <div class="project-card">
-        <img src="./image/QRBOT.png" alt="">
-        <title class="project-title">QR Bot</title>
-        <h3 class="project-title">QR Bot</h3>
-        <p class="project-description">QR Bot</p>
+      <div class="project-card">
+        <img src="./images/Screenshot (2997).png" alt="">
+        <title class="project-title">My Portfolio</title>
+        <h3 class="project-title">My Portfolio</h3>
+        <p class="project-description">This is my portfolio where anyone can see details related me</p>
         <p class="project-tech-stack">HTML, CSS, JAVASCRIPT</p>
         <div style="display:flex; flex-direction: row; justify-content: space-between;"><a class="project-github-link"
-            href="https://github.com/abhishek1494k/QRBOT.com"><i class="fa-brands fa-github"></i></a>
-          <a class="project-deployed-link" href="https://www-qrbot-com.netlify.app/"><i
+            href="https://github.com/pandeyneha0123/pandeyneha0123.github.io"><i class="fa-brands fa-github"></i></a>
+          <a class="project-deployed-link" href="https://dazzling-manatee-434bf9.netlify.app/"><i
               class="fa-solid fa-arrow-up-right-from-square"></i></a>
-        </div> -->
-      </div>
+        </div> 
+
+      </div> 
+
+      
     </section>
     <br>
     <!-------------------- GitHUB ---------------------->
