--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           <li><a class="nav-link skills" href="#skills">SKILLS</a></li>
           <li><a class="nav-link projects" href="#projects">PROJECTS</a></li>
           <li><a class="nav-link contact" href="#contact">CONTACT</a></li>
-          <li class="nav-link resume" id="resume"> <button onclick="resume()" id="resume-button-1"><a id="resume-link-1" href="https://drive.google.com/file/d/1_yw_dU3am4WPoBIHMdhLtTmAkClrHAwb/view?usp=share_link"
-            target="_blank" download="Neha_Pandey_Resume.pdf">Resume</a></button></li>
+          <li class="nav-link resume" id="resume"> <button onclick="resume()" id="resume-button-1"><a id="resume-link-1" href="./resume/Neha-Pandey-Resume"
+            target="_blank" download="Neha-Pandey-Resume.pdf">Resume</a></button></li>
 
           
           <!-- <i class="fa-solid fa-download"></i> -->
@@ -242,7 +242,7 @@
 <script>
   function resume() {
     
-      window.open("https://drive.google.com/file/d/1_yw_dU3am4WPoBIHMdhLtTmAkClrHAwb/view?usp=share_link", "_blank");
+      window.open("https://drive.google.com/file/d/1_yw_dU3am4WPoBIHMdhLtTmAkClrHAwb/view","_blank");
   }
   
 
