--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
           <li><a class="nav-link skills" href="#skills">SKILLS</a></li>
           <li><a class="nav-link projects" href="#projects">PROJECTS</a></li>
           <li><a class="nav-link contact" href="#contact">CONTACT</a></li>
-          <li class="nav-link resume" id="resume"> <button onclick="resume()" id="resume-button-1"><a id="resume-link-1" href="./resume/Neha-Pandey-Resume"
+          <li class="nav-link resume" id="resume"> <button onclick="resume()" id="resume-button-1"><a id="resume-link-1" href="./resume/Neha-Pandey-Resume.pdf"
             target="_blank" download="Neha-Pandey-Resume.pdf">Resume</a></button></li>
+
 
           
           <!-- <i class="fa-solid fa-download"></i> -->
@@ -67,9 +68,9 @@
     <section id="home">
       <img src="./images/WhatsApp Image 2023-01-18 at 9.17.58 PM (1).jpeg" class="home-img" alt="#" />
       <br>
-      <h3 id="user-detail-name">Neha</h3>
-      <button onclick="resume()" id="resume-button-2"><a id="resume-link-2" href="https://drive.google.com/file/d/1_yw_dU3am4WPoBIHMdhLtTmAkClrHAwb/view?usp=share_link"
-          target="_blank" download="Neha_Pandey.pdf">Resume</a></button>
+      <h3 id="user-detail-name"> Neha Pandey </h3>
+      <button onclick="resume()" id="resume-button-2"><a id="resume-link-2" href="./resume/Neha-Pandey-Resume.pdf"
+          target="_blank" download="Neha-Pandey-Resume.pdf">Resume</a></button>
     </section>
     <!-------------------- ABOUT ---------------------->
     <section id="about" class="about section">
