--- a/index.html
+++ b/index.html
@@ -204,17 +204,17 @@
       <div id="git-stat">
         <div>
           <img id="github-streak-stats"
-            src="https://github-readme-streak-stats.herokuapp.com/?user=pandeyneha0123&"
+            src="https://github-readme-streak-stats.herokuapp.com?user=pandeyneha0123&theme=react&border_radius=6.5&date_format=M%20j%5B%2C%20Y%5D"
             alt="streakstat" />
           <br>
           <img id="github-stats-card"
-            src="https://github-readme-stats.vercel.app/api?username=pandeyneha0123&show_icons=true&locale=en"
+            src="https://github-readme-stats.vercel.app/api?username=pandeyneha0123&count_private=true&theme=react"
             alt="stat-card" />
         </div>
         <br>
         <div>
           <img id="github-top-langs"
-            src="https://github-readme-stats.vercel.app/api/top-langs?username=pandeyneha0123&show_icons=true&locale=en&layout=compact"
+            src="https://github-readme-stats.vercel.app/api/top-langs/?username=pandeyneha0123&theme=react&layout=compact"
             alt="top_languages" />
         </div>
       </div>
