--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <section id="projects">
       <!-- 1 -->
       <div class="project-card">
-        <img src="https://user-images.githubusercontent.com/87129673/221365948-7b435f82-f945-4b0b-b362-4e9c987a678f.png" alt="">
+        <img src="./images/Screenshot (3034).png" alt="">
         <title class="project-title">Broker Application System</title>
         <h3 class="project-title">HomeDecor</h3>
         <p class="project-description">An e-commerce website, with admin panel and responsive landing page</p>
@@ -150,7 +150,7 @@
       </div>
       <!-- 2 -->
       <div class="project-card">
-        <img src="https://camo.githubusercontent.com/9e6cf2c523113dbcbac61d7b7804be9168738c41cd4092dcf5952ffe6d39afa6/68747470733a2f2f692e6962622e636f2f79386d786867762f48726d2e6a7067">
+        <img src="./images/Screenshot (3033).png">
         <title class="project-title">Student Management System</title>
         <h3 class="project-title">Student Management System</h3>
         <p class="project-description">a software application used to store employee information and support various human resource functions, such as benefits, payrol</p>
