--- a/index.html
+++ b/index.html
@@ -134,18 +134,22 @@
     <!-------------------- PROJECTS ---------------------->
     <section id="projects">
       <!-- 1 -->
+     
+
+
       <div class="project-card">
         <img src="./images/Screenshot (3034).png" alt="">
         <title class="project-title">Broker Application System</title>
-        <h3 class="project-title">HomeDecor</h3>
+        <h3 class="project-title">Broker Application System</h3>
         <p class="project-description">An e-commerce website, with admin panel and responsive landing page</p>
         <p class="project-tech-stack">java,MySQL,Spring</p>
         <p class="project-tech-stack">SpringBoot,Swagger,Postman</p>
         <div style="display:flex; flex-direction: row; justify-content: space-between;"> <a class="project-github-link"
             href="https://github.com/Ashish33000/Real-Estate-Broker_Application"><i class="fa-brands fa-github"></i></a>
-          <a class="project-deployed-link" href="http://localhost:8088/swagger-ui/index.html"><i
+          <a class="project-deployed-link" href="https://www-homedecor-com.netlify.app/"><i
               class="fa-solid fa-arrow-up-right-from-square"></i></a>
         </div>
+        <!-- http://localhost:8088/swagger-ui/index.html -->
 
       </div>
       <!-- 2 -->
@@ -157,7 +161,7 @@
         <p class="project-tech-stack">Java,MySQL,JDBC,Hibernate</p>
         <div style="display:flex; flex-direction: row; justify-content: space-between;"><a class="project-github-link"
             href="https://github.com/pandeyneha0123/HR-Management-System"><i class="fa-brands fa-github"></i></a>
-          <a class="project-deployed-link" href="https://drive.google.com/file/d/1_wsVlDf62FiDlO2LDMjyMUeJ6YYELbkk/view?usp=share_link"><i
+          <a class="project-deployed-link" href="https://www-homedecor-com.netlify.app/"><i
               class="fa-solid fa-arrow-up-right-from-square"></i></a>
         </div>
 
@@ -192,6 +196,67 @@
       </div> 
 
       
+    </section>
+    <br>
+
+
+    <section id="projects">
+      <!-- 1 -->
+      <div class="project-card">
+        <img src="./image/homedecor.png" alt="">
+        <title class="project-title">HomeDecor</title>
+        <h3 class="project-title">HomeDecor</h3>
+        <p class="project-description">An e-commerce website, with admin panel and responsive landing page</p>
+        <p class="project-tech-stack">HTML, CSS, JAVASCRIPT</p>
+        <p class="project-tech-stack">NODEJS,EXPRESS,MONGODB</p>
+        <div style="display:flex; flex-direction: row; justify-content: space-between;"> <a class="project-github-link"
+            href="https://github.com/abhishek1494k/valid-morning-8854"><i class="fa-brands fa-github"></i></a>
+          <a class="project-deployed-link" href="https://www-homedecor-com.netlify.app/"><i
+              class="fa-solid fa-arrow-up-right-from-square"></i></a>
+        </div>
+
+      </div>
+      <!-- 2 -->
+      <div class="project-card">
+        <img src="./image/mytv.png">
+        <title class="project-title">MyTv</title>
+        <h3 class="project-title">MyTv</h3>
+        <p class="project-description">An OTT Platform, with admin panel & responsive landing page</p>
+        <p class="project-tech-stack">HTML, CSS, JAVASCRIPT</p>
+        <div style="display:flex; flex-direction: row; justify-content: space-between;"><a class="project-github-link"
+            href="https://github.com/abhishek1494k/brainy-sidewalk-2900"><i class="fa-brands fa-github"></i></a>
+          <a class="project-deployed-link" href="https://mytv-com.netlify.app/"><i
+              class="fa-solid fa-arrow-up-right-from-square"></i></a>
+        </div>
+
+      </div>
+      <!-- 3 -->
+      <div class="project-card">
+        <img src="./image/yellowcart.png" alt="">
+        <title class="project-title">YellowCart</title>
+        <h3 class="project-title">YellowCart</h3>
+        <p class="project-description">An e-commerce website with login page and 2 product section </p>
+        <p class="project-tech-stack">HTML, CSS, JAVASCRIPT</p>
+        <div style="display:flex; flex-direction: row; justify-content: space-between;"><a class="project-github-link"
+            href="https://github.com/abhishek1494k/feigned-waste-5696"><i class="fa-brands fa-github"></i></a>
+          <a class="project-deployed-link" href="https://yellowcart-com.netlify.app/"><i
+              class="fa-solid fa-arrow-up-right-from-square"></i></a>
+        </div>
+
+      </div>
+      <!-- 4 -->
+      <div class="project-card">
+        <img src="./image/QRBOT.png" alt="">
+        <title class="project-title">QR Bot</title>
+        <h3 class="project-title">QR Bot</h3>
+        <p class="project-description">QR Bot</p>
+        <p class="project-tech-stack">HTML, CSS, JAVASCRIPT</p>
+        <div style="display:flex; flex-direction: row; justify-content: space-between;"><a class="project-github-link"
+            href="https://github.com/abhishek1494k/QRBOT.com"><i class="fa-brands fa-github"></i></a>
+          <a class="project-deployed-link" href="https://www-qrbot-com.netlify.app/"><i
+              class="fa-solid fa-arrow-up-right-from-square"></i></a>
+        </div>
+      </div>
     </section>
     <br>
     <!-------------------- GitHUB ---------------------->
