--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <a href="https://github.com/pandeyneha0123"><i class="fa-brands fa-github"></i></a>
     <!-- <a href="https://www.instagram.com//"><i class="fa-brands fa-instagram"></i></a>
     <a href="https://twitter.com/abhishek1494k"><i class="fa-brands fa-twitter"></i></a> -->
-    <a href="https://www.linkedin.com/in/abhishek1994k/"><i class="fa-brands fa-linkedin"></i></a>
+    <a href="https://www.linkedin.com/in/neha-pandey-b7b687208/"><i class="fa-brands fa-linkedin"></i></a>
     <!-- <a href="https://codepen.io/abhishek1494k"><i class="fa-brands fa-codepen"></i></a> -->
     <h5> &nbsp;&nbsp;_______________________</h5>
   </div>
@@ -146,7 +146,7 @@
         <p class="project-tech-stack">SpringBoot,Swagger,Postman</p>
         <div style="display:flex; flex-direction: row; justify-content: space-between;"> <a class="project-github-link"
             href="https://github.com/Ashish33000/Real-Estate-Broker_Application"><i class="fa-brands fa-github"></i></a>
-          <a class="project-deployed-link" href="https://www-homedecor-com.netlify.app/"><i
+          <a class="project-deployed-link" href="https://drive.google.com/file/d/1qehbO6ytUFRVWXuCNUazeupLk18PVn62/view"><i
               class="fa-solid fa-arrow-up-right-from-square"></i></a>
         </div>
         <!-- http://localhost:8088/swagger-ui/index.html -->
@@ -161,7 +161,7 @@
         <p class="project-tech-stack">Java,MySQL,JDBC,Hibernate</p>
         <div style="display:flex; flex-direction: row; justify-content: space-between;"><a class="project-github-link"
             href="https://github.com/pandeyneha0123/HR-Management-System"><i class="fa-brands fa-github"></i></a>
-          <a class="project-deployed-link" href="https://www-homedecor-com.netlify.app/"><i
+          <a class="project-deployed-link" href="https://drive.google.com/file/d/1_wsVlDf62FiDlO2LDMjyMUeJ6YYELbkk/view"><i
               class="fa-solid fa-arrow-up-right-from-square"></i></a>
         </div>
 
