--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <!-------------------- HOME ---------------------->
     <section id="home">
-      <img src="./images/WhatsApp Image 2023-01-18 at 9.17.58 PM (1).jpeg" class="home-img" alt="#" />
+      <img src="./images/neha pic.jpeg" class="home-img" alt="#" />
       <br>
       <h3 id="user-detail-name"> Neha Pandey </h3>
       <button onclick="resume()" id="resume-button-2"><a id="resume-link-2" href="./resume/Neha-Pandey-Resume.pdf"
